--- a/finance/static/ngTemplates/app.finance.inboundInvoices.form.html
+++ b/finance/static/ngTemplates/app.finance.inboundInvoices.form.html
@@ -139,7 +139,8 @@
             </tr>
             <tr ng-repeat="v in form.products track by $index">
               <td>{{$index + 1}}</td>
-              <td><input type="text" class="form-control-pos text-center" ng-model="v.product"></td>
+              <!-- <td><input type="text" class="form-control-pos text-center" ng-model="v.product"></td> -->
+              <td><input type="text" class="form-control-pos text-center" ng-model="v.product" uib-typeahead="p as p.product for p in productSearch($viewValue)"></td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.price"></td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.receivedQty"></td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.hsn" uib-typeahead="meta as meta.code for meta in productMetaSearch($viewValue)"></td>
