--- a/finance/static/ngTemplates/app.finance.purchaseOrder.explore.html
+++ b/finance/static/ngTemplates/app.finance.purchaseOrder.explore.html
@@ -51,14 +51,14 @@
                 <span>{{data.address}}</span>
             </div>
           </div>
-          <div class = "row" style="padding-top:10px" >
+          <!-- <div class = "row" style="padding-top:10px" >
             <div class="col-md-6 text-right">
                 <strong>  PO Number : </strong>
             </div>
             <div class="col-md-6">
                 <span>{{data.poNumber}}</span>
             </div>
-          </div>
+          </div> -->
           <div class = "row" style="padding-top:10px" >
             <div class="col-md-6 text-right">
                 <strong>  Quotation Number : </strong>
