--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -269,6 +269,15 @@
             </span></span>
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="form-group">
+          <div class="form-group">
+            <span class="col-md-5"><i class="fa fa-ticket"></i> &nbsp; <label>Blink</label>&nbsp;</span>
+            <label class="bal_switch"> <input type="checkbox" ng-model="cpForm.is_blink"><span class="bal_slider round"></span></label>
+            <!-- <i class="fa fa-ticket"></i> &nbsp; <label>Ticket</label> &nbsp;<input type="checkbox" ng-model="cpForm.ticket"> -->
+          </div>
+        </div>
+      </div>
 
       <div class="col-md-6">
         <span class="col-md-12"><div class="form-group">
