--- a/support/static/ngTemplates/app.inventory.modal.html
+++ b/support/static/ngTemplates/app.inventory.modal.html
@@ -3,7 +3,7 @@ Create A Product
 </div>
 <div class="modal-body">
   <div class="row" style="padding:10px">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <label>Product</label>
       <input uib-typeahead="product as product.part_no for product in productSearch($viewValue)" ng-model="form.product" type="text" class="form-control">
     </div>
@@ -11,12 +11,17 @@ Create A Product
       <label>Quantity</label>
       <input ng-model="form.qty" type="text" class="form-control">
     </div>
-    <div class="col-md-3">
-      <label>Price</label>
-      <input ng-model="form.rate" type="text" class="form-control">
+    <div class="col-md-4">
+      <label>Project</label>
+      <input uib-typeahead="p as p.title for p in projectSearch($viewValue)" ng-model="form.project" type="text" class="form-control">
     </div>
-    <div class="col-md-2" style="padding-top:25px">
-      <button type="button" class="btn btn-primary " ng-click="saveProduct()">Save</button>
+    <div class="col-md-2"  style="padding-top:25px">
+      <!-- <label>Price</label>
+      <input ng-model="form.rate" type="text" class="form-control"> -->
+        <button type="button" class="btn btn-primary " ng-click="saveProduct()">Save</button>
     </div>
   </div>
+  <!-- <div class="row"  style="padding-top:25px">
+    <button type="button" class="btn btn-primary " ng-click="saveProduct()">Save</button>
+  </div> -->
 </div>
