--- a/homepage/static/ngTemplates/app.homepage.account.form.html
+++ b/homepage/static/ngTemplates/app.homepage.account.form.html
@@ -1,5 +1,5 @@
-<div class="modal-header text-center">
-  <h3>Edit Profile Details</h3>
+<div class="modal-header bg-aqua text-center">
+  <h4 style="margin:0px">Edit Profile Details</h4>
 </div>
 <div class="modal-body">
   <div class="container-fluid">
@@ -17,13 +17,21 @@
     <div class="col-md-6">
       <div class="form-group">
         <label>Standard</label>
-        <select class="form-control text-center" ng-model="profileform.standard">
-          <option value="Arial Black">Arial Black</option>
-          <option value = "Times New Roman" >Times New Roman</option>
-          <option value="Arial">Arial</option>
-          <option value="Comic Sans">Comic Sans</option>
-          <option value="Sans-serif">Sans-serif</option>
-          <option value="Monospace">Monospace</option>
+        <select class="form-control" ng-model="profileform.standard">
+          <option value="1">Class 1</option>
+          <option value="2">Class 2</option>
+          <option value="3">Class 3</option>
+          <option value="4">Class 4</option>
+          <option value="5">Class 5</option>
+          <option value="6">Class 6</option>
+          <option value="7">Class 7</option>
+          <option value="8">Class 8</option>
+          <option value="9">Class 9</option>
+          <option value="10">Class 10</option>
+          <option value="11">Class 11</option>
+          <option value="12">Class 12</option>
+          <option value="13">Entrence Exam Preparation</option>
+          <option value="14">Undergraduates Programs</option>
         </select>
       </div>
     </div>
