--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -594,7 +594,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="row" ng-if="projects.length>0&&permission" style="padding-top:15px">
+        <div class="row" ng-if="permission" style="padding-top:15px">
           <div class="col-md-11">
             <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
               confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
