--- a/support/static/ngTemplates/app.projects.service.item.html
+++ b/support/static/ngTemplates/app.projects.service.item.html
@@ -104,9 +104,9 @@
   </div>
 
   <div class="col-md-12" style="margin-top:30px" ng-if="cmrData.totalPo>0">
-    <div class="col-md-12 text-right" style="font-size:26px">
+    <!-- <div class="col-md-12 text-right" style="font-size:26px">
       <strong>Total PO : </strong>{{cmrData.totalPo.toFixed(2)}}
-    </div>
+    </div> -->
 
     <table class="invoiceTable" style=" width: 100%;">
       <thead>
