--- a/HR/static/ngTemplates/app.HR.manage.profile.html
+++ b/HR/static/ngTemplates/app.HR.manage.profile.html
@@ -2,28 +2,18 @@
   <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:70vh;">
     <div class="row">
       <div class="container-fluid text-center">
-        <img ng-src="{{data.userPK | getDP}}" class="img img-circle" style="height:100px;width:100px;margin-bottom:20px;"> <br>
-
-        <span class="text-muted" style="font-size:18px;">{{data.userPK | getName }}</span> <br><br>
+        <img ng-src="{{data.profile.displayPicture}}" class="img img-circle" style="height:100px;width:100px;margin-bottom:20px;"> <br>
+        <span class="text-muted" style="font-size:18px;">{{data.first_name}}{{data.last_name}}</span> <br><br>
       </div>
     </div>
 
     <div class="row" style="margin-top:20px;">
-
-      <div class="row">
-        <div class="col-md-5 text-right">
-          <label>Student Name : </label> <br>
-        </div>
-        <div class="col-md-7">
-          <span>{{data.stuID}}</span> <br>
-        </div>
-      </div>
       <div class="row">
         <div class="col-md-5 text-right">
           <label><i class="fa fa-envelope-o"></i> School/College : </label> <br>
         </div>
         <div class="col-md-7">
-          <span>{{data.email}}</span> <br>
+          <span>{{tutorData.school= 'S'?'School':'College'}}</span> <br>
         </div>
       </div>
       <div class="row">
@@ -31,49 +21,25 @@
           <label><i class="fa fa-envelope-o"></i> Institue Name : </label><br>
         </div>
         <div class="col-md-7">
-          <span>{{data.email}}<span ng-if="!data.email" class="text-danger">NA</span></span> <br>
+          <span>{{tutorData.schoolName}}<span ng-if="!tutorData.schoolName" class="text-danger">NA</span></span> <br>
         </div>
       </div>
+      <hr>
       <div class="row">
-        <div class="col-md-5 text-right">
-          <label><i class="fa fa-phone"></i> Mobile : </label><br>
-        </div>
-        <div class="col-md-7">
-          <span>{{data.mobile}}</span> <br>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="row" style="margin-top:20px;" ng-if="profile.designation.reportingTo">
-      <label>Reporting Manager</label> <br>
-      <div class="container-fluid ">
-        <div class="col-md-3">
-          <img ng-src="{{profile.designation.reportingTo | getDP}}" class="img img-circle pull-right" style="height:50px;width:50px;"> <br>
-        </div>
-        <div class="col-md-9">
-          <span>{{profile.designation.reportingTo | getName}}</span> <br>
-          <span class="text-muted">#{{profile.designation.reportingTo | getID}}</span> <br>
+        <div class="col-md-12">
+          <div class="" style="line-height:2.2;" ng-repeat="d in detail">
+            <span style="text-transform:capitalize;"><i class="fa fa-check-circle fa-fw" aria-hidden="true"></i>{{d}}</span><br>
+          </div>
         </div>
       </div>
     </div>
-
-    <div class="row" style="margin-top:20px;" ng-if="profile.designation.secondaryApprover">
-      <label>Secondary Manager</label> <br>
-      <div class="container-fluid ">
-        <div class="col-md-3">
-          <img ng-src="{{profile.designation.secondaryApprover | getDP}}" class="img img-circle pull-right" style="height:50px;width:50px;"> <br>
-        </div>
-        <div class="col-md-9">
-          <span>{{profile.designation.secondaryApprover | getName}}</span> <br>
-          <span class="text-muted">#{{profile.designation.secondaryApprover | getID}}</span> <br>
-        </div>
-      </div>
-    </div>
-
   </div>
+
+
   <div class="col-md-6">
     <div class="container-fluid">
+
+
       <div class="row" style="padding:20px;">
         <div class="row">
           <div class="col-md-3 text-right">
@@ -81,15 +47,13 @@
             <i class="fa fa-map-marker fa-3x pull-right" style="color:#eeeeee;"></i>
           </div>
           <div class="col-md-9">
-            <span>{{data.localAddressStreet}}<span ng-if="!data.localAddressStreet" class="text-danger">NA</span></span><br>
-            <span>{{data.localAddressCity}}<span ng-if="!data.localAddressCity" class="text-danger">NA</span></span><br>
-            <span>{{data.localAddressPin}}<span ng-if="!data.localAddressPin" class="text-danger">NA</span></span><br>
-            <span>{{data.localAddressState}}<span ng-if="!data.localAddressState" class="text-danger">NA</span></span><br>
-            <span>{{data.localAddressCountry}}<span ng-if="!data.localAddressCountry" class="text-danger">NA</span></span><br>
+            <span>{{tutorData.street}}<span ng-if="!tutorData.street" class="text-danger">NA</span></span><br>
+            <span>{{tutorData.city}}<span ng-if="!tutorData.city" class="text-danger">NA</span></span><br>
+            <span>{{tutorData.state}}<span ng-if="!tutorData.state" class="text-danger">NA</span></span><br>
+            <span>{{tutorData.country}}<span ng-if="!tutorData.country" class="text-danger">NA</span></span><br>
           </div>
         </div>
       </div>
-
 
       <div class="row" style="padding:20px;">
         <div class="row">
@@ -97,7 +61,7 @@
             <label>Parent's Email :</label>
           </div>
           <div class="col-md-9">
-            {{data.fathersName}}
+            {{tutorData.parentEmail}}
           </div>
         </div>
         <div class="row">
@@ -105,292 +69,10 @@
             <label>Parent's Number :</label>
           </div>
           <div class="col-md-9">
-            {{data.mothersName}}
+            {{tutorData.parentMobile}}
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-md-3 text-right">
-            <label>Date of birth :</label>
-          </div>
-          <div class="col-md-9">
-            {{data.dateOfBirth | date:'yyyy-MM-dd'}}
-          </div>
-        </div>
-
-        <div class="row" ng-if="data.wifesName">
-          <div class="col-md-3 text-right">
-            <label>Spouse Name :</label>
-          </div>
-          <div class="col-md-9">
-            {{data.wifesName}}
-          </div>
-        </div>
-        <div class="row" ng-if="data.TNCandBond">
-          <div class="col-md-3 text-right">
-            <label>TNC and Bond:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.TNCandBond | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.TNCandBond}}" target="_blank">{{data.TNCandBond.split('/')[data.TNCandBond.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.resume">
-          <div class="col-md-3 text-right">
-            <label>Resume:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.resume | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.resume}}" target="_blank">{{data.resume.split('/')[data.resume.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.certificates">
-          <div class="col-md-3 text-right">
-            <label>Certificates:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.certificates | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.certificates}}" target="_blank">{{data.certificates.split('/')[data.certificates.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.otherDocs">
-          <div class="col-md-3 text-right">
-            <label>Other Docs:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.otherDocs | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.otherDocs}}" target="_blank">{{data.otherDocs.split('/')[data.otherDocs.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.transcripts">
-          <div class="col-md-3 text-right">
-            <label>Transcripts:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.transcripts | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.transcripts}}" target="_blank">{{data.transcripts.split('/')[data.transcripts.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.IDPhoto">
-          <div class="col-md-3 text-right">
-            <label>Aadhar Card:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.IDPhoto | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.IDPhoto}}" target="_blank">{{data.IDPhoto.split('/')[data.IDPhoto.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.resignation">
-          <div class="col-md-3 text-right">
-            <label>Resignation:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.resignation | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.resignation}}" target="_blank">{{data.resignation.split('/')[data.resignation.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.vehicleRegistration">
-          <div class="col-md-3 text-right">
-            <label>Vehicle Registration:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.vehicleRegistration | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.vehicleRegistration}}" target="_blank">{{data.vehicleRegistration.split('/')[data.vehicleRegistration.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.appointmentAcceptance">
-          <div class="col-md-3 text-right">
-            <label>Appointment Acceptance:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.appointmentAcceptance | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.appointmentAcceptance}}" target="_blank">{{data.appointmentAcceptance.split('/')[data.appointmentAcceptance.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.pan">
-          <div class="col-md-3 text-right">
-            <label>PAN:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.pan | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.pan}}" target="_blank">{{data.pan.split('/')[data.pan.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.drivingLicense">
-          <div class="col-md-3 text-right">
-            <label>Driving License:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.drivingLicense | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.drivingLicense}}" target="_blank">{{data.drivingLicense.split('/')[data.drivingLicense.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.cheque">
-          <div class="col-md-3 text-right">
-            <label>Cheque:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.cheque | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.cheque}}" target="_blank">{{data.cheque.split('/')[data.cheque.split('/').length-1] }}</a>
-          </div>
-        </div>
-        <div class="row" ng-if="data.passbook">
-          <div class="col-md-3 text-right">
-            <label>Passbook:</label>
-          </div>
-          <div class="col-md-9">
-            <i class="fa {{data.passbook | fileTypeIcon}} fa-3x"></i>
-            <a ng-href="{{data.passbook}}" target="_blank">{{data.passbook.split('/')[data.passbook.split('/').length-1] }}</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
-  <!-- <div class="col-md-3">
-    <div class="row" style="margin-top:20px;">
-      <label>Work locations</label> <br> <br>
-      <div class="row" ng-repeat="u in profile.designation.unitsObj">
-        <div class="container-fluid card" style="margin-bottom:20px;">
-          <label>Division</label> : {{u.division.name.split('(')[0]}}<br>
-          <label>Unit</label> : {{u.name}} ({{u.city}}) <br>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- <div class="col-md-3">
-    <div class="row" style="margin-top:20px;">
-      <label>Payroll Details of {{data.userPK | getName}}</label> <br> <br>
-      <div class="row">
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>HRA:</strong>
-          </div>
-          <div class="col-md-6">
-            <i class="fa fa-inr" aria-hidden="true"></i> {{payroll.hra}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Special:</strong>
-          </div>
-          <div class="col-md-6">
-            <i class="fa fa-inr" aria-hidden="true"></i> {{payroll.special}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>LTA:</strong>
-          </div>
-          <div class="col-md-6">
-            <i class="fa fa-inr" aria-hidden="true"></i> {{payroll.lta}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Basic:</strong>
-          </div>
-          <div class="col-md-6">
-            <i class="fa fa-inr" aria-hidden="true"></i> {{payroll.basic}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>AdHOC:</strong>
-          </div>
-          <div class="col-md-6">
-            <i class="fa fa-inr" aria-hidden="true"></i> {{payroll.adHoc}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Policy Number:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.policyNumber}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Provider:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.provider}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Amount:</strong>
-          </div>
-          <div class="col-md-6">
-            <i class="fa fa-inr" aria-hidden="true"></i> {{payroll.amount}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Al:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.al}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>ML:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.ml}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>AdHOC Leaves:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.adHocLeaves}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Joinning Date:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.joiningDate}}
-          </div>
-        </div>
-        <div class="row" ng-if="payroll.lastWorkingDate">
-          <div class="col-md-6 text-right">
-            <strong>Last Working Date:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.lastWorkingDate}}
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Account Number:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.accountNumber}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>IFSC code:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.ifscCode}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 text-right">
-            <strong>Bank Details:</strong>
-          </div>
-          <div class="col-md-6">
-            {{payroll.bankName}}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-</div>
